# ballerina-ls-mcp-server

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  run.py
ballerina_mcp/: __init__.py  main.py
