[project]
name = "ballerina-ls-mcp-server"
version = "0.1.0"
description = "MCP Server to search through the code of Ballerina Language Server Respository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.2",
    "tree-sitter>=0.25.1",
    "tree-sitter-java>=0.23.5",
]
